<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2018 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">

	<LinearLayout
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical" android:animateLayoutChanges="true">

		<com.forrestguice.support.widget.AppBarLayout
			android:id="@+id/layout_app_menubar"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<com.forrestguice.support.widget.Toolbar
				android:id="@+id/app_menubar" style="?attr/toolbarTheme"
				app:title="@string/widgetList_label" />

		</com.forrestguice.support.widget.AppBarLayout>

		<ProgressBar android:id="@+id/progress" android:visibility="gone"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			style="?android:attr/progressBarStyleHorizontal"
			android:indeterminateOnly="true" />

		<ListView
			android:id="@+id/widgetList"
			android:layout_width="match_parent" android:layout_height="wrap_content" />

		<include layout="@layout/layout_empty_widgetlist" />

	</LinearLayout>
</merge>
