...
        <com.forrestguice.support.widget.AppBarLayout
            android:id="@+id/layout_app_menubar"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <com.forrestguice.support.widget.Toolbar
                android:id="@+id/app_menubar" style="?attr/toolbarTheme"
                app:title="@string/actions_loadaction_dialog_title" />

        </com.forrestguice.support.widget.AppBarLayout>

        <LinearLayout android:id="@android:id/content"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">
...
