...
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<com.forrestguice.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@android:id/empty"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center" android:orientation="vertical">

    <com.forrestguice.support.widget.ImageView
        android:id="@+id/emptyView_image" android:src="@drawable/ic_96dp_widgets"
        android:layout_width="96dp" android:layout_height="96dp"
...
