...
            android:layout_gravity="end" android:animateLayoutChanges="true"
            android:layout_marginLeft="@dimen/welcomeActivity_margin" android:layout_marginRight="@dimen/welcomeActivity_margin">

            <Button android:id="@+id/button_restore_backup" android:visibility="visible"
                android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="end"
                android:textSize="?attr/text_size_small"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" android:text="@string/action_restoreBackup"  />

            <ProgressBar android:id="@+id/progress_restore_backup" android:visibility="gone"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_gravity="center"
                android:layout_margin="8dp"/>

        </FrameLayout>
...
